--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,10 +11,12 @@ jobs:
         steps:
             # This helps to pull the docker image from Docker Hub
             - name: Login to Docker Hub
-              uses: docker/login-action@v1
+            #   uses: docker/login-action@v1
+              uses: docker/login-action@v3
               # This "with" keyword helps to provide inputs to the specified action
               with:
-                username: ${{ secrets.DOCKERHUB_USER }}
+                # username: ${{ secrets.DOCKERHUB_USER }}
+                username: ${{ vars.DOCKERHUB_USER }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Checkout
               uses: actions/checkout@v2
