--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,8 +15,7 @@ jobs:
               uses: docker/login-action@v3
               # This "with" keyword helps to provide inputs to the specified action
               with:
-                # username: ${{ secrets.DOCKERHUB_USER }}
-                username: ${{ vars.DOCKERHUB_USER }}
+                username: ${{ secrets.DOCKERHUB_USER }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Checkout
               uses: actions/checkout@v2
